# Projet_Architecture_Logicielle-Cagnotte

./: .gitignore  README.md  pyproject.toml
src/archilog/: __init__.py  api.py  auth.py  config.py  data.py  domain.py  forms.py  views.py  web.py
src/archilog/static/: style.css
src/archilog/templates/: base.html  home.html  pot.html
src/archilog/views/: cli.py  web.py
tests/: test_domain.py
